# nnpdf

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .travis.yml  CMakeLists.txt  FKTable Playground.ipynb  Makefile  Playground for the new commondata format.ipynb  README  README.md  autocomplete.py  deprecated_functions.py  nnpdf_datafiles  nnprofile_example.yaml  nuclear.yml  posterior_mc.ipynb  pyproject.toml  run_a_fit.md  run_main_thr14_with_covmat.yml  run_n3fit_array.slurm  run_thr14_mc141.yml  run_thr14_mc151.yml  run_thr14_mc161.yml  runfile.sh  runfile_2.sh  setup.py  stable_changelog.md  submit_mc_dropout_pipeline.sh  varflavors.py  version.cmake
buildmaster/: .gitignore  CMakeLists.txt  backward_compatibility.yaml  dataset_names.yml  new_dataset_test_report.py  old_new_check.py  old_new_porting_map.yml  oldcommondata_porter.py  report_new_dataset.yaml  test_ATLAS_1JET_8TEV_R06_PTY.py  test_ATLAS_2JET_7TEV_R06_M12Y.py  test_CMS_1JET_8TEV_PTY.py  test_CMS_2JET_7TEV_M12Y.py
buildmaster/ATLAS_1JET_13TEV_DIF/: filter.py  metadata.yaml
buildmaster/ATLAS_1JET_8TEV_R06/: filter.py  filter_utils.py  kinematics.yaml  metadata.yaml  uncertainties.yaml  uncertainties_decorrelated.yaml
buildmaster/ATLAS_1JET_8TEV_R06_DEC/: filter.py  filter_utils.py  metadata.yaml  uncertainties.yaml
buildmaster/ATLAS_2JET_13TEV_DIF/: data.yaml  filter.py  metadata.yaml
buildmaster/ATLAS_2JET_7TEV_R06/: filter.py  filter_bugged.py  filter_ini.py  filter_unc_tmp_tmp.py  metadata.yaml  uncertainties.yaml  uncertainties_bugged.yaml  uncertainties_stronger.yaml  uncertainties_weaker.yaml
buildmaster/ATLAS_DY_13TEV/: filter.py  kinematics.yaml  metadata.yaml  uncertainties.yaml
buildmaster/ATLAS_DY_7TEV_DILEPTON/: data_crap.yaml  data_frap.yaml  filter.py  kinematics_crap.yaml  kinematics_frap.yaml  metadata.yaml  uncertainties.yaml  uncertainties_crap.yaml  uncertainties_frap.yaml
buildmaster/ATLAS_DY_7TEV_EMUON/: filter.py  kinematics.yaml  metadata.yaml  uncertainties.yaml
buildmaster/ATLAS_DY_7TEV_LOMASS_EXT/: data.yaml  filter.py  kinematics.yaml  metadata.yaml  uncertainties.yaml
buildmaster/ATLAS_TTBAR_13TEV_LJ_DIF/: data_dSig_dmttBar_norm.yaml  data_dSig_dpTt_norm.yaml  data_dSig_dyttBar_norm.yaml  filter.py  kinematics_dSig_dmttBar_norm.yaml  kinematics_dSig_dpTt.yaml  kinematics_dSig_dyttBar.yaml  metadata.yaml  uncertainties_dSig_dyt.yaml  uncertainties_dSig_dyt_norm.yaml  uncertainties_dSig_dyttBar.yaml
buildmaster/ATLAS_TTBAR_13TEV_TOT/: kinematics.yaml  metadata.yaml  uncertainties.yaml
buildmaster/ATLAS_TTBAR_7TEV_TOT/: metadata.yaml
buildmaster/ATLAS_TTBAR_8TEV_2L_DIF/: filter.py  metadata.yaml
buildmaster/ATLAS_TTBAR_8TEV_LJ_DIF/: data_dSig_dpTt_norm.yaml  kinematics_dSig_dpTt_norm.yaml  kinematics_dSig_dyt.yaml  uncertainties_dSig_dmttBar.yaml  uncertainties_dSig_dmttBar_norm.yaml  uncertainties_dSig_dyt_norm.yaml
buildmaster/ATLAS_TTBAR_8TEV_TOT/: metadata.yaml
buildmaster/ATLAS_WPWM_8TEV_MUON/: data.yaml  filter.py  kinematics.yaml  metadata.yaml  uncertainties.yaml
buildmaster/ATLAS_Z0_8TEV_20FB/: data_inv_dist.yaml  data_rap_dist.yaml  filter.py  metadata.yaml  uncertainties_inv_dist.yaml  uncertainties_rap_dist.yaml
buildmaster/ATLAS_Z0_8TEV_3D/: data_crap.yaml  data_frap.yaml  filter.py  kinematics_crap.yaml  kinematics_frap.yaml  metadata.yaml  uncertainties_crap.yaml  uncertainties_frap.yaml
buildmaster/ATLAS_Z0_8TEV_HIGHMASS/: data.yaml  filter.py  kinematics.yaml  metadata.yaml
buildmaster/ATLAS_Z0_8TEV_LOWMASS/: filter.py  kinematics.yaml  metadata.yaml
buildmaster/ATLAS_Z_13TEV_PT/: data_E.yaml  data_MU.yaml  filter.py  filter_utils.py  kinematics.yaml  kinematics_E.yaml  metadata.yaml  uncertainties_E.yaml  uncertainties_MU.yaml
buildmaster/ATLAS_ttBar_8TeV/: filter.py  kinematics_dSig_dpTt.yaml  kinematics_dSig_dyttBar.yaml  metadata.yaml  uncertainties_dSig_dmttBar.yaml  uncertainties_dSig_dyt.yaml  utils.py
buildmaster/CMS_1JET_13TEV_DIF/: data_r07.yaml  filter.py  metadata.yaml
buildmaster/CMS_1JET_8TEV/: data.yaml  filter.py  filter_utils.py  kinematics.yaml  metadata.yaml  uncertainties.yaml
buildmaster/CMS_2JET_7TEV/: data.yaml  filter.py  filter_utils.py  metadata.yaml  uncertainties.yaml
buildmaster/CMS_TTBAR_13TEV_2L_DIF/: data_dSig_dyt_norm.yaml  filter.py  kinematics_dSig_dpTt_norm.yaml  kinematics_dSig_dyt.yaml  kinematics_dSig_dyttBar.yaml  kinematics_dSig_dyttBar_norm.yaml  metadata.yaml  uncertainties_dSig_dpTt.yaml
buildmaster/CMS_TTBAR_13TEV_LJ_DIF/: data_dSig_dyt.yaml  data_dSig_dyt_norm.yaml  kinematics_dSig_dyt_norm.yaml  kinematics_dSig_dyttBar.yaml  metadata.yaml  uncertainties_dSig_dyttBar.yaml
buildmaster/CMS_TTBAR_13TEV_TOT/: metadata.yaml
buildmaster/CMS_TTBAR_5TEV_TOT/: kinematics.yaml  metadata.yaml
buildmaster/CMS_TTBAR_7TEV_TOT/: metadata.yaml  uncertainties.yaml
buildmaster/CMS_TTBAR_8TEV_2L_DIF/: filter.py  kinematics_d2Sig_dyt_dpTt_norm.yaml  metadata.yaml
buildmaster/CMS_TTBAR_8TEV_LJ_DIF/: filter.py  kinematics_dSig_dmttBar_norm.yaml  kinematics_dSig_dpTt_norm.yaml  kinematics_dSig_dyt_norm.yaml  kinematics_dSig_dyttBar_norm.yaml  metadata.yaml  uncertainties_dSig_dmttBar_norm.yaml  uncertainties_dSig_dpTt_norm.yaml  uncertainties_dSig_dyt_norm.yaml  uncertainties_dSig_dyttBar_norm.yaml  utils.py
buildmaster/CMS_TTBAR_8TEV_TOT/: metadata.yaml  uncertainties.yaml
buildmaster/CMS_WPWM_8TEV_MUON/: metadata.yaml
buildmaster/CMS_WP_13TEV/: data.yaml  filter.py  filter_utils.py  kinematics.yaml  metadata.yaml
doc/: README.md
evolven3fit/: CMakeLists.txt  evolven3fit.cc.in  varflavors.py
libnnpdf/: .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  example.py  libnnpdf.dx  meson.build  meson_options.txt  nnprofile.yaml  nnprofile.yaml.in  save  setup.py
nnpdf_data/: README.md  examples_of_use.py  pyproject.toml  theory.py
nnpdfcpp/: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md
(+16862 files in other folders)
